backend/k8s/announcement-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: announcement-service-app
spec:
  selector:
    matchLabels:
      app: announcement-service-app
  template:
    metadata:
      labels:
        app: announcement-service-app
    spec:
      containers:
        - name: announcement-service-app
          image: axeloooo/announcement-service:latest
          resources:
            limits:
              cpu: "60m"
              memory: "256Mi"
          ports:
            - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: announcement-service-svc
spec:
  selector:
    app: announcement-service-app
  ports:
    - port: 80
      targetPort: 8085
