backend/k8s/api-gateway-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app
spec:
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
    spec:
      containers:
        - name: api-gateway-app
          image: axeloooo/api-gateway:latest
          resources:
            limits:
              cpu: "60m"
              memory: "256Mi"
          ports:
            - containerPort: 8888
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
spec:
  type: LoadBalancer
  selector:
    app: api-gateway-app
  ports:
    - port: 80
      targetPort: 8888
