backend/k8s/auth-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-app
spec:
  selector:
    matchLabels:
      app: auth-service-app
  template:
    metadata:
      labels:
        app: auth-service-app
    spec:
      containers:
        - name: auth-service-app
          image: axeloooo/auth-service:latest
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
          ports:
            - containerPort: 8087
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service-svc
spec:
  selector:
    app: auth-service-app
  ports:
    - port: 80
      targetPort: 8087
