backend/k8s/config-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-service-app
spec:
  selector:
    matchLabels:
      app: config-service-app
  template:
    metadata:
      labels:
        app: config-service-app
    spec:
      containers:
        - name: config-service-app
          image: axeloooo/config-service:latest
          resources:
            limits:
              cpu: "60m"
              memory: "256Mi"
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: config-service-svc
spec:
  selector:
    app: config-service-app
  ports:
    - port: 80
      targetPort: 8080
