backend/k8s/email-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: email-service-app
spec:
  selector:
    matchLabels:
      app: email-service-app
  template:
    metadata:
      labels:
        app: email-service-app
    spec:
      containers:
        - name: email-service-app
          image: axeloooo/email-service
          ports:
            - containerPort: 8088
---
apiVersion: v1
kind: Service
metadata:
  name: email-service-svc
spec:
  selector:
    app: email-service-app
  ports:
    - port: 80
      targetPort: 8088
