backend/k8s/event-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-service-app
spec:
  selector:
    matchLabels:
      app: event-service-app
  template:
    metadata:
      labels:
        app: event-service-app
    spec:
      containers:
        - name: event-service-app
          image: axeloooo/event-service:latest
          ports:
            - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: event-service-svc
spec:
  selector:
    app: event-service-app
  ports:
    - port: 80
      targetPort: 8083
