backend/k8s/household-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: household-service-app
spec:
  selector:
    matchLabels:
      app: household-service-app
  template:
    metadata:
      labels:
        app: household-service-app
    spec:
      containers:
        - name: household-service-app
          image: axeloooo/household-service:latest
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
          ports:
            - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: household-service-svc
spec:
  selector:
    app: household-service-app
  ports:
    - port: 80
      targetPort: 8082
