backend/k8s/pgadmin-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /login
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-svc
spec:
  selector:
    app: pgadmin
  ports:
    - port: 5050
      targetPort: 80
