backend/k8s/registry-service-statefulset.yml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: eureka
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
        - name: eureka
          image: axeloooo/registry-service:latest
          resources:
            limits:
              cpu: "60m"
              memory: "256Mi"
          ports:
            - containerPort: 8761

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-svc
spec:
  clusterIP: None
  selector:
    app: eureka
  ports:
    - port: 8761
      name: eureka

---
apiVersion: v1
kind: Service
metadata:
  name: eureka-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: eureka
  ports:
    - port: 80
      targetPort: 8761
