backend/k8s/task-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-service-app
spec:
  selector:
    matchLabels:
      app: task-service-app
  template:
    metadata:
      labels:
        app: task-service-app
    spec:
      containers:
        - name: task-service-app
          image: axeloooo/task-service:latest
          resources:
            limits:
              cpu: "60m"
              memory: "256Mi"
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: task-service-svc
spec:
  selector:
    app: task-service-app
  ports:
    - port: 80
      targetPort: 8081
