backend/k8s/user-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-app
spec:
  selector:
    matchLabels:
      app: user-service-app
  template:
    metadata:
      labels:
        app: user-service-app
    spec:
      containers:
        - name: user-service-app
          image: axeloooo/user-service:latest
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
          ports:
            - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-svc
spec:
  selector:
    app: user-service-app
  ports:
    - port: 80
      targetPort: 8086
