backend/k8s/userhousehold-service-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userhousehold-service-app
spec:
  selector:
    matchLabels:
      app: userhousehold-service-app
  template:
    metadata:
      labels:
        app: userhousehold-service-app
    spec:
      containers:
        - name: userhousehold-service-app
          image: axeloooo/userhousehold-service:latest
          resources:
            limits:
              cpu: "60m"
              memory: "256Mi"
          ports:
            - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: userhousehold-service-svc
spec:
  selector:
    app: userhousehold-service-app
  ports:
    - port: 80
      targetPort: 8084
