backend/k8s/zipkin-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  selector:
    matchLabels:
      app: zipkin
  template:
    metadata:
      labels:
        app: zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          ports:
            - containerPort: 9411

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-svc
spec:
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411

---
apiVersion: v1
kind: Service
metadata:
  name: zipkin-lb-svc
spec:
  type: LoadBalancer
  selector:
    app: zipkin
  ports:
    - port: 80
      targetPort: 9411
